TFM/01_DatabaseView/v1/k8s/monolith.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monolith
  name: monolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolith
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: monolith
    spec:
      securityContext:
        runAsUser: 1000300
      containers:
        - env:
          - name: MYSQL_HOST
            value: mysql-service
          - name: USERS_SERVICE_URL
            value: http://users:8090
          - name: USE_USERS_SERVICE
            value: "true"
          image: dionisioc/monolith:0.0.5
          name: monolith
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: monolith
  labels:
    app: monolith
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: monolith
  type: LoadBalancer
