TFM/01_DatabaseView/v1/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: split-the-monolith-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: split-the-monolith.com
      http:
        paths:
          - path: /api/v1/books
            pathType: ImplementationSpecific
            backend:
              service:
                name: monolith
                port:
                  number : 8080
          - path: /api/v1/users
            pathType: ImplementationSpecific
            backend:
              service:
                name: users
                port:
                  number : 8090
          - path: /api/v1/users/.*/comments
            pathType: ImplementationSpecific
            backend:
              service:
                name: monolith
                port:
                  number: 8080
